<resources>
    <string name="app_name">ToDoListAppRoom</string>
    <string name="btnAdd">Add</string>
    <string name="extended_fab_content_desc">Floating Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task">Task</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="new_task">New Task</string>
    <string name="no_tasks_today">No Tasks Today</string>
</resources>